--- a/Index.html
+++ b/Index.html
@@ -192,7 +192,7 @@
       
       <table width="100%"><tbody><tr><td width="3%"></td>
 	    <td width="30%">
-	     I am a postdoctoral researcher at Westfälische Wilhelms-Universität Münster, <a href="https://www.uni-muenster.de/de/"> WWU </a> in the research group of Prof. Dr. Eva Viehmann <br>
+	     I am a postdoctoral researcher at <a href="https://www.uni-muenster.de/de/"> Westfälische Wilhelms-Universität Münster, </a> in the research group of Prof. Dr. Eva Viehmann <br>
 		Member of <a href="https://www.uni-muenster.de/MathematicsMuenster/CRC-Geometry/index.shtml"> CRC 1442 Geometry: Deformations and Rigidity </a> <br> 
 		Member of <a href="https://www.uni-muenster.de/MathematicsMuenster/"> Mathematics Muenster </a> <br>	
 
