--- a/Index.html
+++ b/Index.html
@@ -218,7 +218,7 @@
       <h3>&nbsp;&nbsp;Research interests</h3>
 
       <ul>
-	<li>Langlands programs, p-adic geometry, Rapoport-Zink spaces, Shimura varieties, Fargues-Fontaine curves, Automorphic forms. </li>
+	<li>Langlands programs, p-adic geometry, Rapoport-Zink spaces, Shimura varieties, Fargues-Fontaine curves, Automorphic forms... </li>
       </ul>
 
       <hr width="98.4%" size="2" noshade="">
