--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       <h3>&nbsp;&nbsp;Preprints</h3>
       <ul>
 	    	<li> <i> A Harder-Narasimhan stratification of the B+dR-Grassmannian (joint with Eva Viehmann) </li>
-	    	<a href="A Harder-Narasimhan stratification of the $\B+$-Grassmannian"> arXiv </a>
+	    	<a href="https://arxiv.org/abs/2111.01764"> arXiv </a>
 	      </ul><ul>
 		<li> <i> The Kottwitz conjecture for unitary PEL-type Rapoport-Zink spaces (joint with Alexander Bertoloni Meli) </li>
 		<a href="https://arxiv.org/abs/2104.05912"> arXiv </a>
