--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 	      </ul>
 	      <ul>
 		<li> <i>  Shtukas adiques, modifications et applications</li>
-		Bulletin de la Société Mathématique de France 
+		Bulletin de la Société Mathématique de France -  
 		<a href="https://arxiv.org/abs/1904.12381"> arXiv </a>
 	      </ul>
 	      <!--ul> 
