--- a/index.html
+++ b/index.html
@@ -256,6 +256,9 @@
       <hr width="98.4%" size="2" noshade="">
       <h3>&nbsp;&nbsp;Preprints</h3>
       <ul>
+      	<li> <i> Compatibility of the Fargues-Scholze correspondence for unitary groups (joint with Alexander Bertoloni Meli and Linus Hamann) </li>
+	    	<a href="https://arxiv.org/abs/2207.13193"> arXiv </a>
+	      </ul><ul>
 	    	<li> <i> A Harder-Narasimhan stratification of the B+dR-Grassmannian (joint with Eva Viehmann) </li>
 	    	<a href="https://arxiv.org/abs/2111.01764"> arXiv </a>
 	      </ul><ul>
