--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <!-- 	      2020 </td> <td width="0%"></td> <td width="95.5%">  -->
 	      <ul>
 	    	<li> <i>  Un cas PEL de la conjecture de Kottwitz, </i> </li>
-		Annales de l'institut fourier (to appear) - 
+		Annales de l'institut Fourier (to appear) - 
 		<a href="https://arxiv.org/abs/1903.11505"></td>
 
     </tr></tbody></table></center> arXiv </a>
