--- a/index.html
+++ b/index.html
@@ -237,14 +237,14 @@
 	      <ul>
 
 		<li> <i> The Kottwitz conjecture for unitary PEL-type Rapoport-Zink spaces (joint with Alexander Bertoloni Meli) </li>
-		To appear in Journal für die Reine und Angewandte Mathematik (Crelle's Journal) , 2022.
+		To appear in Journal für die Reine und Angewandte Mathematik (Crelle's Journal) , 2022 -
 		<a href="https://arxiv.org/abs/2104.05912"> arXiv </a>
 	      </ul><table width="100%"><tbody><tr><td width="2%"></td>
 	      	      </ul><ul>	
 
 	    <li> <i>  Un cas PEL de la conjecture de Kottwitz, </i> </li>
 		To appear in Annales de l'institut Fourier - 
-		<a href="https://arxiv.org/abs/1903.11505"></td>  	
+		<a href="https://arxiv.org/abs/1903.11505"></a>  	
 
     </tr></tbody></table></center> arXiv </a>
 	      </ul>
