--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
 	    <li> <i>  Un cas PEL de la conjecture de Kottwitz, </i> </li>
 		To appear in Annales de l'institut Fourier - 
-		<a href="https://arxiv.org/abs/1903.11505"></a>  	
+		<a href="https://arxiv.org/abs/1903.11505"> arXiv </a>  	
 
     </tr></tbody></table></center> arXiv </a>
 	      </ul>
