--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 		To appear in Annales de l'institut Fourier - 
 		<a href="https://arxiv.org/abs/1903.11505"> arXiv </a>  	
 
-    </tr></tbody></table></center> arXiv </a>
+    </tr></tbody></table></center> </a>
 	      </ul>
 	      <ul>
 		<li> <i>  Shtukas adiques, modifications et applications</li>
