--- a/index.html
+++ b/index.html
@@ -288,12 +288,15 @@
 	        </ul><ul>
 	        <li> <i> A PEL case of Kottwitz conjecture - Séminaire d'arithmétique, ENS de Lyon, November 2018 </li>
 	        </ul><ul>
+	    <hr width="98.4%" size="2" noshade="">
+      <h3>&nbsp;&nbsp;Teaching</h3>
+      <ul> 
 
-	  <h3>&nbsp;&nbsp;Teaching</h3>
+	
       <ul>
-      	<li> <i> 2016 - 2019 : Teaching various TD (travaux dirigés) classes (in French). 
-	    </ul>
-	    <li> <i> Winter Semester 2019 : Tutor for the course Mathematische Behandlung der Naturwissenschaften 2 (in English). </li>
+      	<li> <i> 2016 - 2019 : Teaching various TD (travaux dirigés) classes (in French). </li>
+	    </ul>  
+      	<li> <i> Winter Semester 2019 : Tutor for the course Mathematische Behandlung der Naturwissenschaften 2 (in English). </li>
 	    </ul>  
 	    <li> <i> Summer Semester 2020 : Tutor for the course Elliptic curves (in English). </li>
 	     </ul>    
