--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
 <hr width="98.4%" size="2" noshade="">
       <h3>&nbsp;&nbsp;Teaching</h3>
       <ul>
+      	<li> <i> Winter Semester 2020 : Tutor for the course Mathematische Behandlung der Naturwissenschaften 2 (in English). </li></ul>
       	<li> <i> Summer Semester 2020 : Tutor for the course Elliptic curves (in English). </li></ul>
       		<li> <i> Winter Semester 2019 : Tutor for the course Mathematische Behandlung der Naturwissenschaften 2 (in English). </li></ul>
       	<li> <i> 2016 - 2019 : Teaching various TD (travaux dirigés) classes (in French). </li></ul>
