--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <ul>
       	    <li> <i> Winter Semester 2022 : Tutor for the course Commutative Algebra II (in English). </li>
             </ul></ul>
-      	    <li> <i> Winter Semester 2021 : Tutor for the course Commutative Algebra II (in English). </li>
+      	    <!--li> <i> Winter Semester 2021 : Tutor for the course Commutative Algebra II (in English). </li>
       	    </ul></ul>
       	    <li> <i> Winter Semester 2020 : Tutor for the course Mathematische Behandlung der Naturwissenschaften 2 (in English). </li>
       	    </ul>
@@ -303,7 +303,7 @@
       	    <li> <i> Winter Semester 2019 : Tutor for the course Mathematische Behandlung der Naturwissenschaften 2 (in English). </li>
       	    </ul></ul>
       	    <li> <i> 2016 - 2019 : Teaching various TD (travaux dirigés) classes (in French). </li>
-      	    </ul></ul>
+      	    </ul></ul-->
         
 
       	      
