--- a/index.html
+++ b/index.html
@@ -295,7 +295,11 @@
 
       	    <li> <i> Winter Semester 2022 : Tutor for the course Commutative Algebra II (in English). </li>
             </ul><ul>
+            <li> <i> Summer Semester 2022 : Assistance for the seminar Linear Algebraic Groups (in English). </li>
+            </ul><ul>
       	    <li> <i> Winter Semester 2021 : Tutor for the course Commutative Algebra II (in English). </li>
+      	    </ul><ul>
+      	    <li> <i> Summer Semester 2021 : Tutor for the course Algebraic Geometry (in English). </li>
       	    </ul><ul>
       	    <li> <i> Winter Semester 2020 : Tutor for the course Mathematische Behandlung der Naturwissenschaften 2 (in English). </li>
       	    </ul><ul>
@@ -304,7 +308,7 @@
       	    <li> <i> Winter Semester 2019 : Tutor for the course Mathematische Behandlung der Naturwissenschaften 2 (in English). </li>
       	    </ul><ul>
       	    <li> <i> 2016 - 2019 : Teaching various TD (travaux dirigés) classes (in French). </li>
-      	    </ul><
+      	    </ul>
         
 
       	      
