--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
       <!-- 	    <td width="2.5%"> -->
       <!-- 	      2020 </td> <td width="0%"></td> <td width="95.5%">  -->
 	      <ul>
+	    <li> <i> A Harder-Narasimhan stratification of the B+dR-Grassmannian (joint with Eva Viehmann) </li>
+	    To apper in Compositio.
+	    <a href="https://arxiv.org/abs/2111.01764"> arXiv </a>
+	      </ul>  	
 
 		<li> <i> The Kottwitz conjecture for unitary PEL-type Rapoport-Zink spaces (joint with Alexander Bertoloni Meli) </li>
 		To appear in Journal für die Reine und Angewandte Mathematik (Crelle's Journal), 2022 -
@@ -264,9 +268,6 @@
       <ul>
       	<li> <i> Compatibility of the Fargues-Scholze correspondence for unitary groups (joint with Alexander Bertoloni Meli and Linus Hamann) </li>
 	    	<a href="https://arxiv.org/abs/2207.13193"> arXiv </a>
-	      </ul><ul>
-	    	<li> <i> A Harder-Narasimhan stratification of the B+dR-Grassmannian (joint with Eva Viehmann) </li>
-	    	<a href="https://arxiv.org/abs/2111.01764"> arXiv </a>
 	      </ul>
 	<hr width="98.4%" size="2" noshade="">
       <h3>&nbsp;&nbsp;Talks</h3>
