--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 	      </ul><table width="100%"><tbody><tr><td width="2%"></td>
 	      	      </ul><ul>	
 
-	    <li> <i>  Un cas PEL de la conjecture de Kottwitz, </i> </li>
+	    <li> <i>  Un cas PEL de la conjecture de Kottwitz </i> </li>
 		To appear in Annales de l'institut Fourier - 
 		<a href="https://arxiv.org/abs/1903.11505"> arXiv </a>  	
 
