--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 	      </ul><ul>  	
 
 		<li> <i> The Kottwitz conjecture for unitary PEL-type Rapoport-Zink spaces (joint with Alexander Bertoloni Meli) </li>
-		To appear in Journal für die Reine und Angewandte Mathematik (Crelle's Journal), 2022 -
+		Journal für die Reine und Angewandte Mathematik (Crelle's Journal), p1-68, Heft 796, Band 2023
 		<a href="https://arxiv.org/abs/2104.05912"> arXiv </a>
 	      </ul><table width="100%"><tbody><tr><td width="2%"></td>
 	      	      </ul><ul>	
