--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <!-- 	      2020 </td> <td width="0%"></td> <td width="95.5%">  -->
 	      <ul>
 	    <li> <i> A Harder-Narasimhan stratification of the B+dR-Grassmannian (joint with Eva Viehmann) </li>
-	    Compositio Math. 159 (2023), 711-745
+	    Compositio Math., p711-745, 159 (2023), 
 	    <a href="https://arxiv.org/abs/2111.01764"> arXiv </a>
 	      </ul><ul>  	
 
