--- a/index.html
+++ b/index.html
@@ -266,6 +266,10 @@
       <hr width="98.4%" size="2" noshade="">
       <h3>&nbsp;&nbsp;Preprints</h3>
       <ul>
+      	<li> <i> On Categorical Local Langlands Program for $GL_n$ </li>
+	    	<a href="https://arxiv.org/pdf/2309.16505.pdf"> arXiv </a>
+	      </ul>
+      <ul>
       	<li> <i> Compatibility of the Fargues-Scholze correspondence for unitary groups (joint with Alexander Bertoloni Meli and Linus Hamann) </li>
 	    	<a href="https://arxiv.org/abs/2207.13193"> arXiv </a>
 	      </ul>
