--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       <hr width="98.4%" size="2" noshade="">
       <h3>&nbsp;&nbsp;Preprints</h3>
       <ul>
-      	<li> <i> On Categorical Local Langlands Program for $GL_n$ </li>
+      	<li> <i> On Categorical Local Langlands Program for GL_n </li>
 	    	<a href="https://arxiv.org/pdf/2309.16505.pdf"> arXiv </a>
 	      </ul>
       <ul>
