--- a/index.html
+++ b/index.html
@@ -192,14 +192,12 @@
       
       <table width="100%"><tbody><tr><td width="3%"></td>
 	    <td width="30%">
-	     I am a postdoctoral researcher at <a href="https://www.uni-muenster.de/de/"> Westfälische Wilhelms-Universität Münster </a>, in the research group of Prof. Dr. Eva Viehmann <br>
-		Member of <a href="https://www.uni-muenster.de/MathematicsMuenster/CRC-Geometry/index.shtml"> CRC 1442 Geometry: Deformations and Rigidity </a> <br> 
-		Member of <a href="https://www.uni-muenster.de/MathematicsMuenster/"> Mathematics Muenster </a> <br>	
+	     I am a postdoctoral researcher at <a href=" https://www.i2m.univ-amu.fr/ "> Institut de Mathématiques de Marseille </a>, in the research group of Prof. Raphaël BEUZART-PLESSIS. Before that, I was a postdoc in the research group of Prof. Eva Viehmann at TU Munich and at WWU Münster. <br>
+			
 
 	      <a href="mailto:%20%20%20%20%20%20%20knguyen%20%20%20%20%20%20%20@%20%20%20%20%20%20%20uni-muenster.de">
-		knguyen                                                                                                                                                                                                 
-		@                                                                                                                                                                                                                 
-		uni-muenster.de
+		kieu-hieu.NGUYEN@univ-amu.fr                                                                                                                                                                                                 
+	
 	      </a><br><br><br>
 	      <address>
 		Mathematisches Institut<br>
