--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       
       <table width="100%"><tbody><tr><td width="3%"></td>
 	    <td width="30%">
-	     I am a postdoctoral researcher at <a href=" https://www.i2m.univ-amu.fr/ "> Institut de Mathématiques de Marseille </a>, in the research group of Prof. Raphaël BEUZART-PLESSIS. Before that, I was a postdoc in the research group of Prof. Eva Viehmann at TU Munich and at WWU Münster. <br>
+	     I am a postdoctoral researcher at <a href=" https://www.i2m.univ-amu.fr/ "> Institut de Mathématiques de Marseille </a>, in the research group of Prof. Raphaël BEUZART-PLESSIS. Before that, I was a postdoctoral researcher in the research group of Prof. Eva Viehmann at TU Munich and at WWU Münster. I defended my PhD at University Paris 13 in 2019 under the supervision of Prof. Pascal Boyer and Prof. Laurent Fargues. <br>
 			
 
 	      <a href="mailto:%20%20%20%20%20%20%20knguyen%20%20%20%20%20%20%20@%20%20%20%20%20%20%20uni-muenster.de">
@@ -200,12 +200,10 @@
 	
 	      </a><br><br><br>
 	      <address>
-		Mathematisches Institut<br>
-		Westfälische Wilhelms-Universität Münster<br>
-		Fachbereich Mathematik und Informatik der Universität Münster<br>
-		Einsteinstrasse 62<br>
-		48149 Münster<br>
-		Germany
+		Institut de Mathématiques de Marseille<br>
+		163 Avenue de Luminy<br>
+		13009 Marseille<br>
+		France
 	      </address>
 	    </td>
 	    
@@ -216,7 +214,7 @@
       <h3>&nbsp;&nbsp;Research interests</h3>
 
       <ul>
-	<li>Langlands programs, p-adic geometry, Rapoport-Zink spaces, Shimura varieties, Fargues-Fontaine curves, Automorphic forms... </li>
+	<li>Langlands programs, p-adic geometry, Rapoport-Zink spaces, Shimura varieties, Fargues-Fontaine curves, Representations of p-adic groups, Automorphic forms... </li>
       </ul>
 
       <hr width="98.4%" size="2" noshade="">
@@ -264,11 +262,11 @@
       <hr width="98.4%" size="2" noshade="">
       <h3>&nbsp;&nbsp;Preprints</h3>
       <ul>
-      	<li> <i> On categorical local Langlands program for GL_n </li>
+      	<li> <i> On categorical local Langlands program for GL_n (preprint - 2023) </li>
 	    	<a href="https://arxiv.org/pdf/2309.16505.pdf"> arXiv </a>
 	      </ul>
       <ul>
-      	<li> <i> Compatibility of the Fargues-Scholze correspondence for unitary groups (joint with Alexander Bertoloni Meli and Linus Hamann) </li>
+      	<li> <i> Compatibility of the Fargues-Scholze correspondence for unitary groups (joint with Alexander Bertoloni Meli and Linus Hamann) (preprint - 2022) </li>
 	    	<a href="https://arxiv.org/abs/2207.13193"> arXiv </a>
 	      </ul>
 	<hr width="98.4%" size="2" noshade="">
