--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       
       <table width="100%"><tbody><tr><td width="3%"></td>
 	    <td width="30%">
-	     I am a postdoctoral researcher at <a href=" https://www.i2m.univ-amu.fr/ "> Institut de Mathématiques de Marseille </a>, in the research group of Prof. Raphaël BEUZART-PLESSIS. Before that, I was a postdoctoral researcher in the research group of Prof. Eva Viehmann at TU Munich and at WWU Münster. I defended my PhD at University Paris 13 in 2019 under the supervision of Prof. Pascal Boyer and Prof. Laurent Fargues. <br>
+	     I am a postdoctoral researcher at <a href=" https://www.i2m.univ-amu.fr/ "> Institut de Mathématiques de Marseille </a>, in the research group of Prof. Raphaël Beuzart-Plessis. Before that, I was a postdoctoral researcher in the research group of Prof. Eva Viehmann at TU Munich and at WWU Münster. I defended my PhD at University Paris 13 in 2019 under the supervision of Prof. Pascal Boyer and Prof. Laurent Fargues. <br>
 			
 
 	      <a href="mailto:%20%20%20%20%20%20%20knguyen%20%20%20%20%20%20%20@%20%20%20%20%20%20%20uni-muenster.de">
