--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       <h3>&nbsp;&nbsp;Preprints</h3>
       <ul>
       	<li> <i> On categorical local Langlands program for GL_n (preprint - 2023) </li>
-	    	<a href="https://arxiv.org/pdf/2309.16505.pdf"> arXiv </a>
+	    	<a href="https://arxiv.org/abs/2309.16505v2"> arXiv </a>
 	      </ul>
       <ul>
       	<li> <i> Compatibility of the Fargues-Scholze correspondence for unitary groups (joint with Alexander Bertoloni Meli and Linus Hamann) (preprint - 2022) </li>
