--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
       <!-- <table width="100%"><tbody><tr><td width="2%"></td> -->
       <!-- 	    <td width="2.5%"> -->
       <!-- 	      2020 </td> <td width="0%"></td> <td width="95.5%">  -->
+      	<ul>
+      	<li> <i> Compatibility of the Fargues-Scholze correspondence for unitary groups (joint with Alexander Bertoloni Meli and Linus Hamann) - To appear in Mathematische Annalen </li>
+	    	<a href="https://arxiv.org/abs/2207.13193"> arXiv </a>
+	      </ul>
 	      <ul>
 	    <li> <i> A Harder-Narasimhan stratification of the B+dR-Grassmannian (joint with Eva Viehmann) </li>
 	    Compositio Math., p711-745, 159 (2023), 
@@ -265,10 +269,7 @@
       	<li> <i> On categorical local Langlands program for GL_n (preprint - 2023) </li>
 	    	<a href="https://arxiv.org/abs/2309.16505v3"> arXiv </a>
 	      </ul>
-      <ul>
-      	<li> <i> Compatibility of the Fargues-Scholze correspondence for unitary groups (joint with Alexander Bertoloni Meli and Linus Hamann) (preprint - 2022) </li>
-	    	<a href="https://arxiv.org/abs/2207.13193"> arXiv </a>
-	      </ul>
+   
 	<hr width="98.4%" size="2" noshade="">
       <h3>&nbsp;&nbsp;Talks</h3>
       <ul> 
