--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <!-- 	    <td width="2.5%"> -->
       <!-- 	      2020 </td> <td width="0%"></td> <td width="95.5%">  -->
       	<ul>
-      	<li> <i> Compatibility of the Fargues-Scholze correspondence for unitary groups (joint with Alexander Bertoloni Meli and Linus Hamann) - To appear in Mathematische Annalen </li>
+      	<li> <i> Compatibility of the Fargues-Scholze correspondence for unitary groups (joint with Alexander Bertoloni Meli and Linus Hamann) </li> To appear in Mathematische Annalen 
 	    	<a href="https://arxiv.org/abs/2207.13193"> arXiv </a>
 	      </ul>
 	      <ul>
