--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       
       <table width="100%"><tbody><tr><td width="3%"></td>
 	    <td width="30%">
-	     I am a MCF at the University of Versailles Saint Quentin. Before that, I was a postdoctoral researcher in the research group of Prof. Raphaël Beuzart-Plessis at Institut de Mathématiques de Marseille and in the research group of Prof. Eva Viehmann at TU Munich and at WWU Münster. I defended my PhD at University Paris 13 in 2019 under the supervision of Prof. Pascal Boyer and Prof. Laurent Fargues. <br>
+	     I am a MCF at the University of Versailles Saint-Quentin. Before that, I was a postdoctoral researcher in the research group of Prof. Raphaël Beuzart-Plessis at Institut de Mathématiques de Marseille and in the research group of Prof. Eva Viehmann at TU Munich and at WWU Münster. I defended my PhD at University Paris 13 in 2019 under the supervision of Prof. Pascal Boyer and Prof. Laurent Fargues. <br>
 			
 
 	      <a href="mailto:%20%20%20%20%20%20%20knguyen%20%20%20%20%20%20%20@%20%20%20%20%20%20%20uni-muenster.de">
@@ -200,9 +200,9 @@
 	
 	      </a><br><br><br>
 	      <address>
-		Institut de Mathématiques de Marseille<br>
-		163 Avenue de Luminy<br>
-		13009 Marseille<br>
+		University of Versailles Saint-Quentin <br>
+		45 Avenue des États Unis<br>
+		78000 Versailles<br>
 		France
 	      </address>
 	    </td>
