--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 	      	      </ul><ul>	
 
 	    <li> <i>  Un cas PEL de la conjecture de Kottwitz </i> </li>
-		To appear in Annales de l'institut Fourier - 
+		Annales de l'institut Fourier, p2239-2304, 73 (2023)
 		<a href="https://arxiv.org/abs/1903.11505"> arXiv </a>  	
 
 	      </ul>
