--- a/index.html
+++ b/index.html
@@ -217,6 +217,16 @@
 	<li>Langlands programs, p-adic geometry, Rapoport-Zink spaces, Shimura varieties, Fargues-Fontaine curves, Representations of p-adic groups, Automorphic forms... </li>
       </ul>
 
+	<h3>&nbsp;&nbsp;Preprints</h3>
+      <ul>
+      	<li> <i> On categorical local Langlands program for GL_n (preprint - 2023) </li>
+	    	<a href="https://arxiv.org/abs/2309.16505v3"> arXiv </a>
+	      </ul>
+   
+	<hr width="98.4%" size="2" noshade="">
+      <h3>&nbsp;&nbsp;Talks</h3>
+      <ul> 
+
       <hr width="98.4%" size="2" noshade="">
       <h3>&nbsp;&nbsp;Accepted papers</h3>
       <!-- </table> -->
