--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@
       </ul>
 
 	<h3>&nbsp;&nbsp;Preprints</h3>
+	<ul>
+      	<li> <i> Categorical local Langlands and torsion classes of some Shimura varieties </li>
+	    	<a href="https://arxiv.org/abs/2505.10724"> arXiv </a>
+	      </ul>
       <ul>
       	<li> <i> On categorical local Langlands program for GL_n (preprint - 2023) </li>
 	    	<a href="https://arxiv.org/abs/2309.16505v3"> arXiv </a>
