--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 	<h3>&nbsp;&nbsp;Preprints</h3>
 	<ul>
-      	<li> <i> Categorical local Langlands and torsion classes of some Shimura varieties </li>
+      	<li> <i> Categorical local Langlands and torsion classes of some Shimura varieties (preprint - 2025) </li>
 	    	<a href="https://arxiv.org/abs/2505.10724"> arXiv </a>
 	      </ul>
       <ul>
